#64183 - [BO] [MARQUEURS] Stockage et affichage des marqueurs